--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Sylphiette",
+    "name": "Zero",
     "version": "3.0.0",
     "description": "Is the best",
     "main": "index.js",
@@ -26,13 +26,13 @@
         "Sylphiette",
         "baileys-md"
     ],
-    "homepage": "https://github.com/FzTeis/Sylphiette",
+    "homepage": "https://github.com/Jostin-444/Zero-Bot",
     "author": {
-        "name": "FzTeis"
+        "name": "Zero"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/FzTeis/Sylphiette.git"
+        "url": "git+https://github.com/Jostin-444/Zero-Bot.git"
     },
     "bugs": {
         "url": "https://github.com/FzTeis/Sylphiette/issues"
